--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ xcuserdata/
 *.xcscmblueprint
 *.xccheckout
 
+.DS_Store
+
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
 DerivedData/
